# ocr-docs

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: ocr-router.agent.md
.github/prompts/: process-downloads.prompt.md
.github/workflows/: sanitize.yml
config/: routing-config.example.yaml  routing-config.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PRIVACY.md  QUICK_START.md
scripts/: _reformat_history.py  dry_run.py  sanitize_check.py
src/ocr_router/: __init__.py  __main__.py  cli.py  config.py  extractor.py  folder_resolver.py  manifest.py  ocr_engine.py  router.py
src/ocr_router/eval/: __init__.py  runner.py
src/ocr_router/feedback/: __init__.py  bootstrap.py  log.py  store.py
src/ocr_router/llm/: __init__.py  backends.py  classifier.py  intent.py  prompts.py  schema.py
tests/: conftest.py  test_cli_regression.py  test_collision.py  test_currency.py  test_eval.py  test_extractor.py  test_feedback_bootstrap.py  test_feedback_log.py  test_feedback_note.py  test_feedback_park.py  test_feedback_paths.py  test_feedback_store.py  test_history_path.py  test_llm_classifier.py  test_llm_decision.py  test_llm_intent.py  test_router.py
