[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-router"
version = "0.1.0"
description = "Intelligent batch PDF OCR processing with automated document routing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "OCR Router Maintainers", email = "maintainers@example.com"}
]

dependencies = [
    "click>=8.1.7",
    "pypdf>=4.1.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
]

[project.scripts]
ocr-router = "ocr_router.cli:cli"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
